KOGITO-4215 - Refactoring explainability random unit tests  (#605)
* use ParameterizedTest to run random unit tests

* remove files

* fix

* fix typo

* refactoring

* fix compilation errors