@@ -42,47 +42,45 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 
 class LimeExplainerTest {
 
-    @Test
-    void testEmptyPrediction() throws ExecutionException, InterruptedException, TimeoutException {
+    @ParameterizedTest
+    @ValueSource(ints = {0, 1, 2, 3, 4})
+    void testEmptyPrediction(int seed) throws ExecutionException, InterruptedException, TimeoutException {
         Random random = new Random();
-        for (int seed = 0; seed < 5; seed++) {
-            random.setSeed(seed);
-            LimeConfig limeConfig = new LimeConfig()
-                    .withSamples(10);
-            LimeExplainer limeExplainer = new LimeExplainer(limeConfig);
-            PredictionInput input = new PredictionInput(Collections.emptyList());
-            PredictionProvider model = TestUtils.getSumSkipModel(0);
-            PredictionOutput output = model.predictAsync(List.of(input))
-                    .get(Config.INSTANCE.getAsyncTimeout(), Config.INSTANCE.getAsyncTimeUnit())
-                    .get(0);
-            Prediction prediction = new Prediction(input, output);
+        random.setSeed(seed);
+        LimeConfig limeConfig = new LimeConfig()
+                .withSamples(10);
+        LimeExplainer limeExplainer = new LimeExplainer(limeConfig);
+        PredictionInput input = new PredictionInput(Collections.emptyList());
+        PredictionProvider model = TestUtils.getSumSkipModel(0);
+        PredictionOutput output = model.predictAsync(List.of(input))
+                .get(Config.INSTANCE.getAsyncTimeout(), Config.INSTANCE.getAsyncTimeUnit())
+                .get(0);
+        Prediction prediction = new Prediction(input, output);
 
-            assertThrows(LocalExplanationException.class, () -> limeExplainer.explainAsync(prediction, model));
-        }
+        assertThrows(LocalExplanationException.class, () -> limeExplainer.explainAsync(prediction, model));
     }
 
-    @Test
-    void testNonEmptyInput() throws ExecutionException, InterruptedException, TimeoutException {
+    @ParameterizedTest
+    @ValueSource(ints = {0, 1, 2, 3, 4})
+    void testNonEmptyInput(int seed) throws ExecutionException, InterruptedException, TimeoutException {
         Random random = new Random();
-        for (int seed = 0; seed < 5; seed++) {
-            random.setSeed(seed);
-            LimeConfig limeConfig = new LimeConfig()
-                    .withSamples(10);
-            LimeExplainer limeExplainer = new LimeExplainer(limeConfig);
-            List<Feature> features = new ArrayList<>();
-            for (int i = 0; i < 4; i++) {
-                features.add(TestUtils.getMockedNumericFeature(i));
-            }
-            PredictionInput input = new PredictionInput(features);
-            PredictionProvider model = TestUtils.getSumSkipModel(0);
-            PredictionOutput output = model.predictAsync(List.of(input))
-                    .get(Config.INSTANCE.getAsyncTimeout(), Config.INSTANCE.getAsyncTimeUnit())
-                    .get(0);
-            Prediction prediction = new Prediction(input, output);
-            Map<String, Saliency> saliencyMap = limeExplainer.explainAsync(prediction, model)
-                    .get(Config.INSTANCE.getAsyncTimeout(), Config.INSTANCE.getAsyncTimeUnit());
-            assertNotNull(saliencyMap);
+        random.setSeed(seed);
+        LimeConfig limeConfig = new LimeConfig()
+                .withSamples(10);
+        LimeExplainer limeExplainer = new LimeExplainer(limeConfig);
+        List<Feature> features = new ArrayList<>();
+        for (int i = 0; i < 4; i++) {
+            features.add(TestUtils.getMockedNumericFeature(i));
         }
+        PredictionInput input = new PredictionInput(features);
+        PredictionProvider model = TestUtils.getSumSkipModel(0);
+        PredictionOutput output = model.predictAsync(List.of(input))
+                .get(Config.INSTANCE.getAsyncTimeout(), Config.INSTANCE.getAsyncTimeUnit())
+                .get(0);
+        Prediction prediction = new Prediction(input, output);
+        Map<String, Saliency> saliencyMap = limeExplainer.explainAsync(prediction, model)
+                .get(Config.INSTANCE.getAsyncTimeout(), Config.INSTANCE.getAsyncTimeUnit());
+        assertNotNull(saliencyMap);
     }
 
     @ParameterizedTest
